--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springsecurity
 spring.datasource.username=root
 spring.datasource.password=gr007879
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+#spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=8080
 
